# arrowhead

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: Dockerfile  docker-compose.yml  fly.toml  render.yaml
docs/: ARCHITECTURE.md  DEPLOY.md  SECURITY.md  THREAT_MODEL.md
sandbox/: welcome.txt
scripts/: check_security.sh  dev.sh  loadtest.py
src/arrowhead/: __init__.py  app.py  cache.py  cli.py  config.py  health.py  server.py
src/arrowhead/auth/: __init__.py  identity.py  oauth.py  principal.py  scopes.py
src/arrowhead/authz/: __init__.py  confirmation.py  enforce.py  policy.py
src/arrowhead/connectors/: __init__.py  sql.py
src/arrowhead/content/: __init__.py  json_safe.py  markdown_safe.py  provenance.py  text_safe.py
src/arrowhead/observability/: __init__.py  audit_log.py  metrics.py  telemetry.py  tracing.py
src/arrowhead/security/: __init__.py  input_validation.py  kill_switch.py  rate_limit.py  sandbox.py  search_match.py  secret_scan.py  ssrf_guard.py
src/arrowhead/store/: __init__.py  document_store.py
src/arrowhead/tools/: calculate.py  catalog.py  doc_read.py  doc_retrieve.py  doc_scan.py  doc_search.py  doc_write.py  read_file.py  registry.py  safe_fetch.py
tests/: conftest.py
tests/conformance/: test_doc_authz.py  test_health.py  test_jwks_auth.py  test_protocol.py
tests/security/: payloads.py  test_adversarial.py  test_doc_adversarial.py
tests/unit/: test_app.py  test_audit_log.py  test_authz_enforce.py  test_authz_policy.py  test_cache.py  test_calculate.py  test_catalog.py  test_cli.py  test_config_injection.py  test_confirmation.py  test_context_cost.py  test_doc_read.py  test_doc_retrieve.py  test_doc_scan.py  test_doc_search.py  test_doc_write.py  test_document_store.py  test_egress_allowlist.py  test_input_validation.py  test_json_safe.py  test_kill_switch.py  test_markdown_safe.py  test_metrics.py  test_oauth.py  test_principal.py  test_provenance.py  test_rate_limit.py  test_read_file.py  test_safe_fetch.py  test_sandbox.py  test_scopes.py  test_secret_scan.py  test_sql_connector.py  test_sql_guard.py  test_ssrf_guard.py  test_telemetry.py  test_text_safe.py  test_tracing.py
