[project]
name = "arrowhead"
version = "0.1.0"
description = "Hardened MCP server reference implementation: OAuth 2.1, SSRF and path-traversal protection, sandboxed evaluation, and token-efficient schemas."
readme = "README.md"
authors = [
    { name = "Jagadesh Varma Nadimpalli", email = "79473081+jagguvarma15@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.4.4",
    "httpx>=0.28.1",
    "opentelemetry-exporter-otlp-proto-http>=1.44.0",
    "opentelemetry-sdk>=1.44.0",
    "pydantic-settings>=2.14.2",
    "redis>=8.0.1",
    "regex>=2026.7.19",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "fakeredis[lua]>=2.36.2",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Put the repo root on sys.path so the tests package (payloads, shared
# fixtures) imports the same way under `pytest` and `python -m pytest`.
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]

[tool.ruff.lint.per-file-ignores]
# Tests use assert for verification and carry fake credentials as fixtures.
"tests/**" = ["S101", "S105", "S106"]
